cambios ultima clase

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>
         All in the same boat, you cannot tailor-made sittuations around you, but you can tailor-made the attittud you face the upcoming challenges
+        Una clase más :)
     </p>
 </body>
 </html>
